--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Face Detection Camera Example</title>
+<title>Face Detection</title>
 <link href="https://docs.opencv.org/3.3.1/js_example_style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -39,8 +39,8 @@
     </tr>
     </table>
 </div>
-<script type="text/javascript" src="js/opencv.js"></script>
-<script src="js/utils.js" type="text/javascript"></script>
+<script type="text/javascript" src="./js/opencv.js"></script>
+<script src="./js/utils.js" type="text/javascript"></script>
 <script id="codeSnippet" type="text/code-snippet">
 let video = document.getElementById('videoInput');
 let src = new cv.Mat(video.height, video.width, cv.CV_8UC4);
