--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </tr>
     </table>
 </div>
-<script type="text/javascript" src="./js/opencv.js"></script>
+<script type="text/javascript" src="./opencv.js"></script>
 <script src="./js/utils.js" type="text/javascript"></script>
 <script id="codeSnippet" type="text/code-snippet">
 let video = document.getElementById('videoInput');
